# atlas-api-wrapper

./: .gitignore  README.md  config.example.json  config_example.json  pyproject.toml  requirements.txt
atlas_api/: __init__.py  api.py  models.py
examples/: get_metadata_from_link.py  parse_through_fandom.py
src/: api.py
src/atlas_api/: __init__.py  api.py  models.py  types.py
tests/: test.py  test_api.py
