[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas_api"
version = "0.0.1"
authors = [
  { name="Thanos" },
]
description = "A small asynchronous wrapper for iris's Atlas API, made to retrieve story metadata from FanFiction.Net (or FFN)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp == 3.8.4",
    "aiosignal == 1.3.1",
    "async-timeout == 4.0.2",
    "attrs == 22.2.0",
    "build == 0.10.0",
    "cattrs == 22.2.0",
    "charset-normalizer == 3.1.0",
    "colorama == 0.4.6",
    "exceptiongroup == 1.1.1",
    "frozenlist == 1.3.3",
    "idna == 3.4",
    "multidict == 6.0.4",
    "packaging == 23.0",
    "pyproject_hooks == 1.0.0",
    "tomli == 2.0.1",
    "yarl == 1.8.2"
]

[project.urls]
"Homepage" = "https://github.com/Sachaa-Thanasius/atlas-api-wrapper"
"Bug Tracker" = "https://github.com/Sachaa-Thanasius/atlas-api-wrapper/issues"
