[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas_api"
authors = [
  { name="Sachaa-Thanasius" },
]
description = "A small asynchronous wrapper for iris's Atlas API, made to retrieve story metadata from FanFiction.Net (or FFN)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp == 3.8.4",
    "aiosignal == 1.3.1",
    "async-timeout == 4.0.2",
    "attrs == 22.2.0",
    "cattrs == 22.2.0",
    "charset-normalizer == 3.1.0",
    "colorama == 0.4.6",
    "exceptiongroup == 1.1.1",
    "frozenlist == 1.3.3",
    "idna == 3.4",
    "multidict == 6.0.4",
    "yarl == 1.8.2",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "atlas_api.__version__" }

[project.urls]
homepage = "https://github.com/Sachaa-Thanasius/atlas-api-wrapper"
repository = "https://github.com/Sachaa-Thanasius/atlas-api-wrapper"
